Closed Bug 56747 Opened 25 years ago Closed 25 years ago

one-time leak of 5 nsVoidArray from nsTimerGtk::Init

Categories

(Core :: XUL, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla0.9

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: memory-leak, Whiteboard: [tind-mlk])

Attachments

(1 file)

nsTimerGtk has a one-time leak of 5 nsVoidArray. They should be deleted in the module destructor. Patch coming, once I write it...
Keywords: mlk
Whiteboard: [tind-mlk]
Status: NEW → ASSIGNED
Priority: P3 → P2
Target Milestone: --- → mozilla0.9
r=pavlov
sr=scc
Fix checked in 2000-10-29 13:35-0800.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: