Fix one-time leak of 5 nsVoidArray by freeing in module destructor.  r=pavlov@netscape.com  sr=scc@mozilla.org  b=56747